ADD DOWNLOAD OF TEMPLATE VOLUME
added the option to download the template volume also as a tiff file and not only as a .nrrd file

--- a/python/Explore_AllenBrainAtlas.ipynb
+++ b/python/Explore_AllenBrainAtlas.ipynb
@@ -11,9 +11,12 @@
     "\n",
     "\n",
     "### Installation:\n",
-    "You can install the SDK in a python (3.7) environment by using:\n",
-    "    \n",
-    "    pip install allensdk"
+    "If you don't have the `allensdk` package already installed, you can install it in a python (3.7) environment by using:  \n",
+    "`pip install allensdk`\n",
+    "\n",
+    "### Resources:\n",
+    "Some parts of the code present here have been extrapolated from these [examples](https://allensdk.readthedocs.io/en/latest/examples.html) that you can reference for further clarification.\n",
+    "\n"
    ]
   },
   {
@@ -6215,8 +6218,9 @@
     "\n",
     "Here we save the output of this analysis that needs to be used in the rest of the riffle shuffle pipeline.  \n",
     "The outputs to be saved are:\n",
-    "- **Updated Annotation Volume** - The 3D annotation volume containing only the Id's specified in the structureSet 167587189\n",
-    "- **Id-Area map** - A .csv file containing the Id's of all the areas in the structureSet 167587189 and the respective names "
+    "- **Updated Annotation Volume** - The 3D annotation volume (TIFF format) containing only the Id's specified in the structureSet 167587189\n",
+    "- **Id-Area map** - A .csv file containing the Id's of all the areas in the structureSet 167587189 and the respective names \n",
+    "- **TemplateVolume** (optional) - The 3D template volume (TIFF format) of the mouse brain. A version of this template (.nrrd file) was downloaded already during the execution of this notebook, however running the optional cell will download a .tif version of the volume"
    ]
   },
   {
@@ -6227,7 +6231,8 @@
    },
    "outputs": [],
    "source": [
-    "# Save the updated annotation volume as a tiff file\n",
+    "# Save the Updated Annotation Volume as a .tif file\n",
+    "# -------------------------------------------------\n",
     "from tifffile import imsave\n",
     "\n",
     "fileName = 'UpdatedAnnotationVolume.tif'\n",
@@ -6241,6 +6246,7 @@
    "outputs": [],
    "source": [
     "# Save the Id-Area map as a .csv file\n",
+    "# -------------------------------------------------\n",
     "fileName = 'RegionIDs.csv'\n",
     "\n",
     "# Create a dataframe\n",
@@ -6250,6 +6256,20 @@
     "\n",
     "# Save the dataframe to a .csv file\n",
     "s.to_csv(fileName,index=False,header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the template volume volume as a .tif file\n",
+    "# -------------------------------------------------\n",
+    "from tifffile import imsave\n",
+    "\n",
+    "fileName = 'template.tif'\n",
+    "imsave(fileName, template)"
    ]
   }
  ],
