--- a/python/Explore_AllenBrainAtlas.ipynb
+++ b/python/Explore_AllenBrainAtlas.ipynb
@@ -6171,10 +6171,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Take a look\n",
+    "\n",
+    "Take a look at a single coronal slice. The plot on the **left** if represents the original annotation volume, while on the **right** is the annotation volume resulting from the modifications that we implemented in the previous cell.  \n",
+    "You can plot different coronal sections by changing the `slice_idx` parameter."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -6191,10 +6201,6 @@
     }
    ],
    "source": [
-    "#  Create custom colormap for displaying accurately brain structures\n",
-    "from matplotlib import cm\n",
-    "from matplotlib.colors import ListedColormap\n",
-    "\n",
     "# pick a slice to show\n",
     "slice_idx = 280\n",
     "\n",
@@ -6220,7 +6226,7 @@
     "The outputs to be saved are:\n",
     "- **Updated Annotation Volume** - The 3D annotation volume (TIFF format) containing only the Id's specified in the structureSet 167587189\n",
     "- **Id-Area map** - A .csv file containing the Id's of all the areas in the structureSet 167587189 and the respective names \n",
-    "- **TemplateVolume** (optional) - The 3D template volume (TIFF format) of the mouse brain. A version of this template (.nrrd file) was downloaded already during the execution of this notebook, however running the optional cell will download a .tif version of the volume"
+    "- **Template Volume** (optional) - The 3D template volume (TIFF format) of the mouse brain. A version of this template (.nrrd file) was downloaded already during the execution of this notebook, however running the optional cell will download a .tif version of the volume"
    ]
   },
   {
@@ -6236,6 +6242,7 @@
     "from tifffile import imsave\n",
     "\n",
     "fileName = 'UpdatedAnnotationVolume.tif'\n",
+    "\n",
     "imsave(fileName, updatedAnnot)"
    ]
   },
@@ -6269,6 +6276,7 @@
     "from tifffile import imsave\n",
     "\n",
     "fileName = 'template.tif'\n",
+    "\n",
     "imsave(fileName, template)"
    ]
   }
